--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,17 @@
 ---
-title: "ISSS626-GAA"
+title: ""
+listing:
+  type: grid
+  max-items: 3
+  contents:
+    - "Hands-on_Ex/*/*.qmd"
+    - "Take-home_Ex/*/*.qmd"
+    - "In-class_Ex/*/*.qmd"
+  sort: "date desc"
+toc: false
+max-description-length: 40
 ---
 
-This is a Quarto website.
+![](Images/landing.PNG){fig-align="center" width="80%"}
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+## Latest Posts:
