Commit Hands-on Exercise 4 (WIP)

--- a/Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.qmd
+++ b/Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.qmd
@@ -19,6 +19,8 @@ format:
     code-line-numbers: false
 ---
 
+![](images/placeholder.PNG){fig-align="center"}
+
 # 1 Overview
 
 In this hands-on exercise, you will learn how to compute spatial weights using R.
@@ -30,19 +32,13 @@ In this hands-on exercise, you will learn how to compute spatial weights using R
 
 Four R packages will be used, they are:
 
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 | Package                                                                                                                                      | Description                                                                                                                 |
-+==============================================================================================================================================+=============================================================================================================================+
+|----------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------|
 | [**spdep**](https://cran.r-project.org/web/packages/spdep/index.html)                                                                        | To create spatial weights matrix objects and related calculations (e.g. spatially lag attributes).                          |
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 | [**sf**](https://cran.r-project.org/web/packages/sf/index.html)                                                                              | For importing, managing, and processing geospatial data                                                                     |
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 | [**tidyverse**](https://www.tidyverse.org/)                                                                                                  | A collection of functions for performing data science task such as importing, tidying, wrangling data and visualising data. |
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 | [**tmap**](https://cran.r-project.org/web/packages/tmap/)                                                                                    | For plotting thematic maps, such as choropleth and bubble maps                                                              |
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 | [**DT**](https://rstudio.github.io/DT/), [**knitr**](https://yihui.org/knitr/) and [**kableExtra**](https://haozhu233.github.io/kableExtra/) | For building tables                                                                                                         |
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 
 : {tbl-colwidths="\[15,85\]"}
 
