Commit Hands-on Exercise 5

--- a/Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.qmd
+++ b/Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.qmd
@@ -32,19 +32,13 @@ In this hands-on exercise, you will learn how to compute spatial weights using R
 
 Four R packages will be used, they are:
 
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 | Package                                                                                                                                      | Description                                                                                                                 |
-+==============================================================================================================================================+=============================================================================================================================+
+|----------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------|
 | [**spdep**](https://cran.r-project.org/web/packages/spdep/index.html)                                                                        | To create spatial weights matrix objects and related calculations (e.g. spatially lag attributes).                          |
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 | [**sf**](https://cran.r-project.org/web/packages/sf/index.html)                                                                              | For importing, managing, and processing geospatial data                                                                     |
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 | [**tidyverse**](https://www.tidyverse.org/)                                                                                                  | A collection of functions for performing data science task such as importing, tidying, wrangling data and visualising data. |
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 | [**tmap**](https://cran.r-project.org/web/packages/tmap/)                                                                                    | For plotting thematic maps, such as choropleth and bubble maps                                                              |
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 | [**DT**](https://rstudio.github.io/DT/), [**knitr**](https://yihui.org/knitr/) and [**kableExtra**](https://haozhu233.github.io/kableExtra/) | For building tables                                                                                                         |
-+----------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------+
 
 : {tbl-colwidths="\[15,85\]"}
 
@@ -66,7 +60,7 @@ Two data sets will be used in this hands-on exercise, they are:
 |            |              |                                                                    |
 |            |              | -   Format: SHP (ESRI Shapefile)                                   |
 +------------+--------------+--------------------------------------------------------------------+
-| Geospatial | *Hunan_2012* | -   Contains selected Hunan's local development indicators in 2012 |
+| Aspatial   | *Hunan_2012* | -   Contains selected Hunan's local development indicators in 2012 |
 |            |              |                                                                    |
 |            |              | -   Format: CSV                                                    |
 +------------+--------------+--------------------------------------------------------------------+
@@ -379,19 +373,19 @@ plot(wm_r,
 
 To determine the upper limit for distance band:
 
-+----------+-----------------------------------------------------------------------------------------------------------------------------+-----------------------------+
-| Step     | Task                                                                                                                        | Function                    |
-+==========+=============================================================================================================================+=============================+
-| 1        | Return a matrix with the indices of points belonging to the set of the k nearest neighbours of each other.                  | `knearneigh()` of **spdep** |
-+----------+-----------------------------------------------------------------------------------------------------------------------------+-----------------------------+
-| 2        | Convert the knn object into a neighbours list of class nb + list of integer vectors containing neighbour region number ids. | `knn2nb()`                  |
-+----------+-----------------------------------------------------------------------------------------------------------------------------+-----------------------------+
-| 3        | Return the length of neighbour relationship edges.                                                                          | `nbdists()` of **spdep**    |
-|          |                                                                                                                             |                             |
-|          | The function returns in the units of the coordinates if the coordinates are projected, in km otherwise.                     |                             |
-+----------+-----------------------------------------------------------------------------------------------------------------------------+-----------------------------+
-| 4        | Remove the list structure of the returned object                                                                            | `unlist()`                  |
-+----------+-----------------------------------------------------------------------------------------------------------------------------+-----------------------------+
++------+-----------------------------------------------------------------------------------------------------------------------------+-----------------------------+
+| Step | Task                                                                                                                        | Function                    |
++======+=============================================================================================================================+=============================+
+| 1    | Return a matrix with the indices of points belonging to the set of the k nearest neighbours of each other.                  | `knearneigh()` of **spdep** |
++------+-----------------------------------------------------------------------------------------------------------------------------+-----------------------------+
+| 2    | Convert the knn object into a neighbours list of class nb + list of integer vectors containing neighbour region number ids. | `knn2nb()`                  |
++------+-----------------------------------------------------------------------------------------------------------------------------+-----------------------------+
+| 3    | Return the length of neighbour relationship edges.                                                                          | `nbdists()` of **spdep**    |
+|      |                                                                                                                             |                             |
+|      | The function returns in the units of the coordinates if the coordinates are projected, in km otherwise.                     |                             |
++------+-----------------------------------------------------------------------------------------------------------------------------+-----------------------------+
+| 4    | Remove the list structure of the returned object                                                                            | `unlist()`                  |
++------+-----------------------------------------------------------------------------------------------------------------------------+-----------------------------+
 
 : {tbl-colwidths="\[5,65,30\]"}
 
@@ -950,4 +944,4 @@ tmap_arrange(lag_sum_gdppc, w_sum_gdppc, asp=1, ncol=2)
 
 # 9 Reference
 
-Kam, T. S. Spatial Weights and Applications. R for Geospatial Data Science and Analytics. <https://r4gdsa.netlify.app/chap08.html>
+Kam, T. S. Spatial Weights and Applications. *R for Geospatial Data Science and Analytics.* <https://r4gdsa.netlify.app/chap08.html>
